--- a/templates/localidad/index.html.twig
+++ b/templates/localidad/index.html.twig
@@ -1,20 +1,18 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello {{ controller_name }}!{% endblock %}
-
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+<h1> Listado de Localidades </h1>
+<ul>
+	{% for localidad in localidades %}
+	<li> 
+		{{ localidad.nombre }} - 
+		{{ localidad.area }} - 
+		{{ localidad.habitantes }} - 
+		{{ localidad.cp }} 
+	</li>
+	{% endfor %}
+</ul>
+<a href="{{ path('localidad_nuevo') }}"> Añadir Localidad </a>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'src/Controller/LocalidadController.php'|file_link(0) }}">src/Controller/LocalidadController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'templates/localidad/index.html.twig'|file_link(0) }}">templates/localidad/index.html.twig</a></code></li>
-    </ul>
-</div>
 {% endblock %}
