--- a/templates/presidente/index.html.twig
+++ b/templates/presidente/index.html.twig
@@ -10,7 +10,6 @@
 		{{ presidente.fechanac|date('Y-m-d') }}
 	</li>
 	{% endfor %}
-</ul>
-<a href="{{ path('presidente_nuevo') }}"> Añadir Presidente </a>
+</ul><a href="{{ path('presidente_nuevo') }}"> Añadir Presidente </a>
 
 {% endblock %}
