--- a/templates/localidad/detalle.html.twig
+++ b/templates/localidad/detalle.html.twig
@@ -4,7 +4,9 @@
 
 <h1> Listado de Localidades </h1>
 <ul>
-	<li> 	{{ localidad.nombre }} - 
+	<li> 	
+			{{ localidad.id }} - 
+			{{ localidad.nombre }} - 
 			{{ localidad.area }} - 
 			{{ localidad.habitantes }} - 
 			{{ localidad.cp }} -
@@ -12,9 +14,7 @@
 	</li>
 </ul>
 
-
-
-<a href="{{ path('localidad_detalle',{'id': 1}) }}"> Añadir Provincia </a>
+<a href="{{ path('provincia_detalle',{'id': 1}) }}"> Añadir Provincia </a>
 
 {{ dump(localidad) }}
 
